# yr

./: .pre-commit-config.yaml  DESCRIPTION  LICENSE  NAMESPACE  README.md  pixi.toml
.github/workflows/: build.yml
R/: doc.R  extendr-wrappers.R  state.R  transaction.R  update.R
src/: Makevars.in  entrypoint.c
src/rust/: Cargo.toml  document.rs
src/rust/src/: array.rs  doc.rs  event.rs  lib.rs  map.rs  message.rs  state.rs  text.rs  transaction.rs  type_conversion.rs  update.rs
tests/testthat/: test-doc.R  test-integration.R  test-map.R  test-message.R  test-state.R  test-transaction.R  test-update.R
tools/: config.R
