[package]
name = "yar"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
publish = false

[lib]
crate-type = ["rlib", "staticlib"]
name = "yar"

[[bin]]
name = "document"
path = "document.rs"

[dependencies]
extendr-api = { version = "0.8.1", default-features = false, features = [
  "result_condition"
] }
yrs = "0.25.0"

[profile.release]
lto = true
codegen-units = 1
