[package]
name = "r-ycrdt"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"  # CRAN https://extendr.rs/user-guide/cran-msrv.html
publish = false

[lib]
crate-type = ["rlib", "staticlib"]
name = "r_ycrdt"

[[bin]]
name = "document"
path = "document.rs"

[dependencies]
# Long time since 0.8.1 release
extendr-api = { git = "https://github.com/extendr/extendr", rev = "ca338c9", default-features = false, features = [
  "result_condition",
] }
stable_deref_trait = "1.2.1"
yoke = { version = "0.8.2", features = ["derive"] }
yrs = "0.25.0"

[dev-dependencies]
extendr-engine = { git = "https://github.com/extendr/extendr", rev = "ca338c9" }

[profile.release]
lto = true
codegen-units = 1
